# BabyMonitor

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
android/: local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/comp3200/: Tracker.java
android/app/src/main/res/drawable/: gamepad_button_drawable.xml  trackpad.xml
android/app/src/main/res/layout/: activity_blue_tooth.xml  activity_login.xml  bluetooth_menu.xml  control_menu.xml  device_list_button.xml  game_pad.xml  mouse.xml  reconnect_button.xml  steering_wheel.xml
backend/: Dockerfile  __init__.py  requirements.txt  test.py
backend/controls/: admin_control.py
backend/core/: crud.py  exceptions.py  init_app.py
backend/log/: __init__.py
backend/models/: admin.py  base.py
backend/schemas/: __init__.py  admins.py  base.py  login.py
backend/settings/: config.py
backend/utils/: jwt_utils.py  password.py
backend/v1/: __init__.py
backend/v1/admin/: __init__.py
front/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.vue  main.ts  style.css
front/src/api/: request.ts
front/src/components/: BehaviorDetailDialog.vue  DeviceDialog.vue  OrderDetailDialog.vue  UserDialog.vue
front/src/router/: index.ts
front/src/utils/: Ajax.ts
front/src/views/: DashBoard.vue  Device.vue  Home.vue  Login.vue  NotFound.vue  Order.vue  Setting.vue  Statistic.vue  UserBehavior.vue  Users.vue
nginx/: nginx.conf
(+49 files in other folders)
